Add some unsafe code

--- a/Example/Example/Example.csproj
+++ b/Example/Example/Example.csproj
@@ -5,4 +5,11 @@
         <LangVersion>9</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SecurityCodeScan.VS2019" Version="5.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
