--- a/.github/workflows/dotnet-sonar.yml
+++ b/.github/workflows/dotnet-sonar.yml
@@ -11,7 +11,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      working-directory: ./Example/
+      working-directory: ./Example/Example
   
 
     steps:
