--- a/.github/workflows/dotnet-sonar.yml
+++ b/.github/workflows/dotnet-sonar.yml
@@ -30,3 +30,5 @@ jobs:
       uses: SonarSource/sonarcloud-github-action@v1.5
       with:
         projectBaseDir: ./Example
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
