--- a/.github/workflows/dotnet-sonar.yml
+++ b/.github/workflows/dotnet-sonar.yml
@@ -30,6 +30,9 @@ jobs:
       uses: SonarSource/sonarcloud-github-action@v1.5
       with:
         projectBaseDir: ./Example
+        args: >
+          -Dsonar.organization=olivierbouchomsfontys
+          -Dsonar.projectKey=olivierbouchomsfontys_pipeline-poc
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
